Cleanup pair reduction code